objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>CL_Number_of_CSV_Rows__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CL # of CSV Rows</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CL_Upload_Status__c</fullName>
        <label>CL Upload Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Uploaded</fullName>
                    <default>true</default>
                    <label>Uploaded</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cash_Logistics_Meter_Reading__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked indicates this is a meter reading image.</description>
        <inlineHelpText>if checked indicates this is a meter reading image</inlineHelpText>
        <label>Cash Logistics Meter Reading</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash_Logistics_Upload_Type_fileupload__c</fullName>
        <description>The type of upload ie. import.. regular file etc (import used for cash logistics to eval in a trigger on insert)</description>
        <inlineHelpText>The type of upload ie. import..</inlineHelpText>
        <label>Upload Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Route Import</fullName>
                </value>
                <value>
                    <fullName>Accel File</fullName>
                    <default>true</default>
                    <label>Accel File</label>
                </value>
                <value>
                    <fullName>Route Import Success Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Redemption_Image_Type__c</fullName>
        <label>Redemption Image Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Cassette</fullName>
                </value>
                <value>
                    <fullName>Current Coin</fullName>
                </value>
                <value>
                    <fullName>New Cassette</fullName>
                </value>
                <value>
                    <fullName>New Coin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Accel_Internal_File</fullName>
        <active>true</active>
        <label>Accel Internal File</label>
    </recordTypes>
</CustomObject>